# the-sauce-bottle

./: .gitignore  LICENSE  README.md  docker-compose.yml  instruction.md  pixi.toml  pyproject.toml  ruff.toml  test_api_structure.py  yoyo.ini
LLM_OUTPUTS/: claude.md  development_plan.md  gemini.md  implementation_stage001.md  implementation_stage002.md  implementation_stage003.md  implementation_stage004.md  implementation_stage005.md  implementation_stage006.md  implementation_stage007.md  implementation_stage008.md  implementation_stage009.md  implementation_stage010.md  implementation_stage011.md  implementation_stage012.md  implementation_stage013.md  progress_tracking.md
backend/: main.py
backend/alembic/: env.py
backend/alembic/versions/: 5a1c808225db_recreate_tables_with_proper_timestamps.py  62d1f95427be_fix_sqlite_timestamp_compatibility.py  b335ac7d5b3f_create_politician_table.py  create_statement_table.py
backend/app/: __init__.py  config.py  database.py  database_async.py  db_utils.py  test_db.py
backend/app/api/: __init__.py  api.py  deps.py  health.py
backend/app/core/: config.py  exceptions.py
backend/app/crud/: __init__.py  base.py  politician.py  politician_async.py  statement.py  statement_async.py
backend/app/models/: __init__.py  politician.py  statement.py
backend/app/schemas/: __init__.py  error.py  politician.py  statement.py
backend/migrations/: 001_create_politicians.py  002_create_statements.py
backend/tests/: test_crud_politician.py  test_schemas.py
docs/: README.md
frontend/: README.md
scripts/: start-backend.sh
(+3 files in other folders)
